tests/errors/shadow_field.eff
type cow = {horn : int}
type bull = {tail : int; horn : string}
